--- a/app/views/exam_groups/index.html.erb
+++ b/app/views/exam_groups/index.html.erb
@@ -42,14 +42,12 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exams_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to "#{t('exam_management')}", :controller => "exam", :action => "create_exam" %> &raquo;
+    <%= t('exam_groups_text') %>
+  </div>
   <div class="box">
-    <div class="bread_crumb">
-      <%= link_to t('course_text'), courses_path %> &raquo;
-      <%= link_to @course.full_name, @course %> &raquo;
-      <%= link_to "#{t('batch')} #{@batch.name}", [@course, @batch] %> &raquo;
-      <%= t('exams_text') %>
-    </div>
 
 
     <table id="listing" width="100%">
