Bread crumbs added in Previous Batch Exams pages
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3695 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/edit_previous_marks.html.erb
+++ b/app/views/exam/edit_previous_marks.html.erb
@@ -33,7 +33,12 @@
   <% unless flash[:warn_notice].nil? %>
     <div id="errorExplanation" class="errorExplanation"><p><%= flash[:warn_notice] %></p> </div>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exams_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to "#{t('exam_management')}", :controller => "exam", :action => "create_exam" %> &raquo;
+    <%= link_to "#{t('previous_batch_exam')}", :controller => "exam", :action => "previous_batch_exams" %> &raquo;
+    <%= @exam.subject.name %>
+  </div>
   <div class="box">
     <% form_for :exam_scores, :url => {:controller=>"exam", :action=>"update_previous_marks", :exam_id=>@exam.id} do |f| %>
 
