--- a/app/views/exam/previous_batch_exams.html.erb
+++ b/app/views/exam/previous_batch_exams.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('previous_batch_exam') %></h3>
   <div id="app-back-button">
@@ -26,25 +26,30 @@
   </div>
 </div>
 <div id="page-yield">
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-<div class="box">
-     <div class="label-field-pair">
-   <label for="student_course"><%= t('select_a_course') %>:
-<%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
-   </label>
-   <div class="text-input-bg">
-  <%= select :course, :course_id,
-        Course.active.map {|b| [b.full_name, b.id]},
-        {:prompt => "#{t('select_a_course')}"},
-        {:onChange => "#{remote_function(:url => {:action => "list_inactive_batches"},
-        :with => "'course_id='+ value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %>
-</div></div>
+  <div class="bread_crumb">
+    <%= link_to t('exams_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to "#{t('exam_management')}", :controller => "exam", :action => "create_exam" %> &raquo;
+    <%= t('previous_batch_exam') %>
+  </div>
+  <div class="box">
+    <div class="label-field-pair">
+      <label for="student_course"><%= t('select_a_course') %>:
+        <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
+      </label>
+      <div class="text-input-bg">
+        <%= select :course, :course_id,
+          Course.active.map {|b| [b.full_name, b.id]},
+          {:prompt => "#{t('select_a_course')}"},
+          {:onChange => "#{remote_function(:url => {:action => "list_inactive_batches"},
+          :with => "'course_id='+ value",
+          :before => "Element.show('loader')",
+          :success => "Element.hide('loader')"
+          )}"} %>
+      </div></div>
 
-<div id="inactive_batches"></div>
-<div class="extender"></div>
- </div></div>
+    <div id="inactive_batches"></div>
+    <div class="extender"></div>
+  </div></div>
