Bread crumbs added in Hr management pages
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3697 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/payslip.erb
+++ b/app/views/employee/payslip.erb
@@ -30,12 +30,16 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('hr'), :controller => "employee", :action=>"hr" %> &raquo;
+    <%= t('create_payslip') %>
+  </div>
   <div id="box">
     <div class="link-box">
       <div class="link-heading"><%= link_to "#{t('select_employee')}", {:controller=>"employee", :action=>"select_department_employee"} %></div>
       <div class="link-descr"><%= t('link_desc1') %></div>
     </div>
-    
+
     <div class="link-box">
       <div class="link-heading"><%= link_to "#{t('rejected_employee')}", {:controller=>"employee", :action=>"rejected_payslip"} %></div>
       <div class="link-descr"><%= t('link_desc4') %></div>
