--- a/app/views/employee/create_monthly_payslip.erb
+++ b/app/views/employee/create_monthly_payslip.erb
@@ -29,6 +29,12 @@
 
 
 <div id="page-yield">
+  <div class="bread_crumb">
+    <%= link_to t('hr'), :controller => "employee", :action=>"hr" %> &raquo;
+    <%= link_to t('create_payslip'), :controller => "employee", :action=>"payslip" %> &raquo;
+    <%= link_to t('individual_employee'), :controller => "employee", :action=>"select_department_employee" %> &raquo;
+    <%= @employee.full_name %>
+  </div>
   <div id="employee_profile_heading">
 
     <div id ="employee_main_info">
@@ -49,10 +55,10 @@
   <div id="form-content">
     <% form_for :manage_payroll do |s| %>
 
-    <div class="payslip-field-pair">
-      <label for="salary_date"><%= t('salary_date') %></label>
-      <div class="payslip-input-bg">
-<%= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:default),
+      <div class="payslip-field-pair">
+        <label for="salary_date"><%= t('salary_date') %></label>
+        <div class="payslip-input-bg">
+          <%= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:default),
             :year_range => 2.years.ago..0.years.from_now , :readonly=>true, :popup=>"force"%></div>
       </div>
 
@@ -76,11 +82,11 @@
       <% end %>
 
 
-    <div id="submit-button">
-      <%=submit_tag("► #{t('create_text')}") %>
-    </div>
-    <div class="extender"></div>
-  <% end %>
+      <div id="submit-button">
+        <%=submit_tag("► #{t('create_text')}") %>
+      </div>
+      <div class="extender"></div>
+    <% end %>
   </div>
 
   <div id="individual-payslip-categories">
