--- a/app/views/employee/select_department_employee.erb
+++ b/app/views/employee/select_department_employee.erb
@@ -28,18 +28,22 @@
 
 
 <div id="page-yield">
-  
+
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
-    <div class="drop-down-box">
-      <label for="category_prefix"><%= t('select_a_department') %></label>
-      <div class="text-input-bg"> <%= select :individual_payslip, :department_id, @departments.map { |s| [s.name, s.id] },
-          {:prompt =>  "#{t('select_a_department')}"},
-          {:onChange => "#{remote_function(:url => {:action => "update_employee_select_list"},
-                                           :with => "'department_id='+value")}"} %> </div>
-    </div>
-    <div class="extender"></div>
-    <div id="employees_select_list"></div>
+  <div class="bread_crumb">
+    <%= link_to t('hr'), :controller => "employee", :action=>"hr" %> &raquo;
+    <%= link_to t('create_payslip'), :controller => "employee", :action=>"payslip" %> &raquo;
+    <%= t('individual_employee') %>
+  </div>
+  <div class="drop-down-box">
+    <label for="category_prefix"><%= t('select_a_department') %></label>
+    <div class="text-input-bg"> <%= select :individual_payslip, :department_id, @departments.map { |s| [s.name, s.id] },
+        {:prompt =>  "#{t('select_a_department')}"},
+        {:onChange => "#{remote_function(:url => {:action => "update_employee_select_list"},
+        :with => "'department_id='+value")}"} %> </div>
+  </div>
+  <div class="extender"></div>
+  <div id="employees_select_list"></div>
 </div>
