--- a/app/views/employee_attendance/employee_leave_reset_all.erb
+++ b/app/views/employee_attendance/employee_leave_reset_all.erb
@@ -32,7 +32,12 @@
     <% unless flash[:notice].nil? %>
       <p class="flash-msg"> <%= flash[:notice] %> </p>
     <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('hr'), :controller => "employee", :action=>"hr" %> &raquo;
+    <%= link_to t('employee_leave_management'), :controller => "employee", :action => "employee_attendance" %> &raquo;
+    <%= link_to t('reset_leave'), :controller => "employee_attendance", :action => "manual_reset" %> &raquo;
+    <%= t('reset_all') %>
+  </div>
     <div id="main-reset-box">
       <div id="reset-box">
         <p> <%= t('reset_count_msg') %></p>
