--- a/app/views/employee_attendance/leave_reset_settings.erb
+++ b/app/views/employee_attendance/leave_reset_settings.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <%= image_tag("/images/HR/leave-new.png") %>
-  <h1><%= t('leave_types') %></h1>
-  <h3><%= t('add_leave_type') %></h3>
+  <h1><%= t('reset_leave') %></h1>
+  <h3><%= t('leave_reset_settings') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -35,12 +35,18 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('hr'), :controller => "employee", :action=>"hr" %> &raquo;
+    <%= link_to t('employee_leave_management'), :controller => "employee", :action => "employee_attendance" %> &raquo;
+    <%= link_to t('reset_leave'), :controller => "employee_attendance", :action => "manual_reset" %> &raquo;
+    <%= t('leave_reset_settings') %>
+  </div>
   <div class="box">
 
     <% form_for :configuration do |c| %>
-    <div class="label-field-pair">
+      <div class="label-field-pair">
         <label for="category_name"><%= t('enable_automatic_reset') %></label>
-          <% if @auto_reset.config_value == '1' %>
+        <% if @auto_reset.config_value == '1' %>
           <div class="check_box"><%= c.check_box :automatic_leave_reset, :checked=>true %></div>
         <% else %>
           <div class="check_box"><%= c.check_box :automatic_leave_reset, :checked=>false %></div>
@@ -52,7 +58,7 @@
           <%= c.text_field :leave_reset_period, :value => @reset_period.config_value %>
         </div>
       </div>
-    <div class="label-field-pair">
+      <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('count_begin_date') %></label>
         <div class="text-input-bg">
           <%= calendar_date_select_tag 'configuration[financial_year_start_date]', @last_reset.config_value || @fin_start_date.config_value %>
