Bread crumbs added in Exam Report pages
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3701 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/create_reports.html.erb
+++ b/app/views/cce_reports/create_reports.html.erb
@@ -35,6 +35,12 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('cce_reports'), :controller => "cce_reports" %> &raquo;
+    Generate CCE Report
+  </div>
   <% unless flash[:error].blank? %>
     <div class="errorExplanation" id="errorExplanation">
       <p>There where some problems</p>
