--- a/app/views/cce_reports/student_wise_report.html.erb
+++ b/app/views/cce_reports/student_wise_report.html.erb
@@ -35,6 +35,12 @@
       <p id="flash-msg"class="flash-msg"> <%= flash[:notice] %> </p>
     <% end %>
   </div>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('cce_reports'), :controller => "cce_reports" %> &raquo;
+    Student-wise Report
+  </div>
   <div class="label-field-pair">
     <label for="batch_id"><%= t('select_a_batch') %></label>
     <%= image_tag("loader.gif",
