--- a/app/views/exam/consolidated_exam_report.html.erb
+++ b/app/views/exam/consolidated_exam_report.html.erb
@@ -35,7 +35,12 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('exam_wise_report'), :controller => "exam", :action => "exam_wise_report" %> &raquo;
+    <%= t('consolidated_report') %>
+  </div>
   <div class="box">
     <h4><%= @batch.course.full_name %> <%= @batch.name %> | <%= @exam_group.name %></h4>
     <% grade_type = "normal" %>
