--- a/public/stylesheets/exam/generated_report.css
+++ b/public/stylesheets/exam/generated_report.css
@@ -179,3 +179,6 @@ table#listing{
     background: #fff;
 }
 /*************************************************************************************/
+.bread_crumb {
+ margin-left: 10px;
+}
