--- a/app/views/cce_reports/index.html.erb
+++ b/app/views/cce_reports/index.html.erb
@@ -33,7 +33,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('cce_reports') %>
+  </div>
   <div class="box">
     <% if permitted_to? :create_reports, :cce_reports %>
       <div class="link-box">
