--- a/app/views/exam/attendance_rank.html.erb
+++ b/app/views/exam/attendance_rank.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('student_ranking_per_attendance') %></h3>
   <div id="app-back-button">
@@ -29,6 +29,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('student_ranking_per_attendance') %>
+  </div>
   <div class="box">
 
     <% form_for :attendance_rank, :url=>{:action=>'student_attendance_rank'} do |x| %>
@@ -38,10 +43,10 @@
           <%= select :attendance_rank, :batch_id,
             Batch.active.map {|b| [b.full_name, b.id]},
             {:prompt => "#{t('select_a_batch')}"}%></div></div>
-    <div class="label-field-pair">
+      <div class="label-field-pair">
         <label for="student_course"><%= t('select_start_date') %>:</label>
         <div  class="text-input-bg"><%= calendar_date_select_tag 'attendance_rank[start_date]', I18n.l(Date.today,:format=>:default), :popup=>:force %></div></div>
-        <div class="label-field-pair">
+      <div class="label-field-pair">
         <label for="student_course"><%= t('select_end_date') %>:</label>
         <div  class="text-input-bg"><%= calendar_date_select_tag 'attendance_rank[end_date]', I18n.l(Date.today,:format=>:default), :popup=>:force %></div></div>
       <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
