--- a/app/views/exam/batch_rank.html.erb
+++ b/app/views/exam/batch_rank.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('student_ranking_per_batch') %></h3>
   <div id="app-back-button">
@@ -29,6 +29,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('student_ranking_per_batch') %>
+  </div>
   <div class="box">
 
     <% form_for :batch_rank, :url=>{:action=>'student_batch_rank'} do |x| %>
