--- a/app/views/exam/combined_report.html.erb
+++ b/app/views/exam/combined_report.html.erb
@@ -29,6 +29,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('combined_report') %>
+  </div>
   <div class="box">
 
     <% form_for :combined_report, :url=>{:action=>'student_combined_report'} do |x| %>
@@ -40,6 +45,6 @@
             {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "load_levels"}, :with => "'batch_id='+value")}"}%></div></div>
       <div id="levels"></div>
     <% end %>
-    
+
     <div class="extender"></div>
   </div></div>
