--- a/app/views/exam/course_rank.html.erb
+++ b/app/views/exam/course_rank.html.erb
@@ -29,6 +29,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('student_ranking_per_course') %>
+  </div>
   <div class="box">
 
     <% form_for :course_rank, :url=>{:action=>'student_course_rank'} do |x| %>
@@ -38,8 +43,8 @@
           <%= select :course_rank, :course_id,
             Course.active.map {|b| [b.full_name, b.id]},
             {:prompt => "#{t('select_a_course')}"},{:onChange => "#{remote_function(:url => {:action => "batch_groups"}, :with => "'course_id='+value")}"}%></div></div>
-        <div id="batch_group_list"></div>
-        <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
-      <% end %>
-      <div class="extender"></div>
-    </div></div>
+      <div id="batch_group_list"></div>
+      <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
+    <% end %>
+    <div class="extender"></div>
+  </div></div>
