--- a/app/views/exam/exam_wise_report.html.erb
+++ b/app/views/exam/exam_wise_report.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('exam_wise_report') %></h3>
   <div id="app-back-button">
@@ -27,40 +27,44 @@
 </div>
 <div id="page-yield">
 
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
- <div class="box">
-<% form_for :exam_report, :url=>{:action=>'generated_report'} do |x| %>
-
-<div class="text-input-bg">
-<%= select :exam_report, :batch_id,
-        @batches.map {|b| [b.full_name, b.id]},
-        {:prompt => "#{t('select_a_batch')}"},
-        {:onChange => "#{remote_function(:url => {:action => "list_exam_types"},
-        :with => "'batch_id='+value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %>
-</div>
-
-  <div  class="text-input-bg" id="exam-group-select">
-    <%= select :exam_report, :exam_group_id, @exam_groups.map{|exam| [exam.name,exam.id]},:prompt=> "#{t('select_exam_group')}" %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('exam_wise_report') %>
   </div>
-<%= image_tag("loader.gif",
-      :align => "absmiddle",
-      :border => 0,
-      :id => "loader",
-      :style =>"display: none;" ) %>
+  <div class="box">
+    <% form_for :exam_report, :url=>{:action=>'generated_report'} do |x| %>
 
-    <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
-  <% # x.submit 'View' %>
-
-<% end %>
-
-  <div class="extender">
-
+      <div class="text-input-bg">
+        <%= select :exam_report, :batch_id,
+          @batches.map {|b| [b.full_name, b.id]},
+          {:prompt => "#{t('select_a_batch')}"},
+          {:onChange => "#{remote_function(:url => {:action => "list_exam_types"},
+          :with => "'batch_id='+value",
+          :before => "Element.show('loader')",
+          :success => "Element.hide('loader')"
+          )}"} %>
       </div>
- </div>
+
+      <div  class="text-input-bg" id="exam-group-select">
+        <%= select :exam_report, :exam_group_id, @exam_groups.map{|exam| [exam.name,exam.id]},:prompt=> "#{t('select_exam_group')}" %>
+      </div>
+      <%= image_tag("loader.gif",
+        :align => "absmiddle",
+        :border => 0,
+        :id => "loader",
+        :style =>"display: none;" ) %>
+
+      <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
+      <% # x.submit 'View' %>
+
+    <% end %>
+
+    <div class="extender">
+
     </div>
+  </div>
+</div>
