--- a/app/views/exam/grouped_exam_report.html.erb
+++ b/app/views/exam/grouped_exam_report.html.erb
@@ -29,6 +29,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+      <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('grouped_exam_reports') %>
+  </div>
   <div class="box">
 
     <% form_for :exam_report, :url=>{:action=>'generated_report4'} do |x| %>
