--- a/app/views/exam/student_batch_rank.html.erb
+++ b/app/views/exam/student_batch_rank.html.erb
@@ -36,7 +36,12 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('student_ranking_per_batch'), :controller => "exam", :action => "batch_rank" %> &raquo;
+    <%= @batch.name %>
+  </div>
   <div class="box">
     <h4><%= t('overall_rankings') %> : <%= @batch.name %> - <%= @batch.course.full_name %></h4>
     <div id="score-table">
