--- a/app/views/exam/student_school_rank.html.erb
+++ b/app/views/exam/student_school_rank.html.erb
@@ -36,7 +36,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('student_ranking_per_school') %>
+  </div>
   <div class="box">
     <h4><%= t('overall_school_rankings') %> : <%= Configuration.find_by_config_key("InstitutionName").config_value.present? ? Configuration.find_by_config_key("InstitutionName").config_value : "-" %></h4>
     <div id="score-table">
