--- a/app/views/exam/subject_wise_report.html.erb
+++ b/app/views/exam/subject_wise_report.html.erb
@@ -28,6 +28,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('subject_wise_report') %>
+  </div>
   <div class="box">
 
     <% form_for :exam_report, :url=>{:action=>'generated_report2'} do |x| %>
