--- a/app/views/exam_reports/archived_exam_wise_report.html.erb
+++ b/app/views/exam_reports/archived_exam_wise_report.html.erb
@@ -35,7 +35,11 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= t('archived_grouped_exam_reports') %>
+  </div>
   <div class="box">
     <% form_for :exam_report, :url=>{:action=>'archived_batches_exam_report'} do |x| %>
       <div class="label-field-pair">
@@ -55,16 +59,16 @@
             )}"} %>
         </div>
       </div>
-    <div class="label-field-pair">
-      <label><%= t('select_a_batch') %> :</label>
-      <div class="text-input-bg"><div id="inactive_batches">
-          <%= select :exam_report, :batch_id,
-            @batches.map {|b| [b.full_name, b.id]},
-            {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
-            :with => "'batch_id='+value"
-            )}"} %></div></div>
-    </div>
-    <div id="archived_report_type"></div>
+      <div class="label-field-pair">
+        <label><%= t('select_a_batch') %> :</label>
+        <div class="text-input-bg"><div id="inactive_batches">
+            <%= select :exam_report, :batch_id,
+              @batches.map {|b| [b.full_name, b.id]},
+              {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
+              :with => "'batch_id='+value"
+              )}"} %></div></div>
+      </div>
+      <div id="archived_report_type"></div>
 
       <%= submit_tag "", :value => "►#{t('view')}", :class => "submit_button" %>
 
