--- a/app/views/student/guardians.erb
+++ b/app/views/student/guardians.erb
@@ -73,7 +73,8 @@
       <div id="new_profile_info_top">
         <div class="profile_top_banner">
           <span class="profile"><%= t('details') %></span>
-          <%= rtl? ? image_tag("master_student/profile/topbanner_rtl.png") : image_tag("master_student/profile/topbanner.png") %></div>
+          <div class="profile-topbanner"></div>
+        </div>
         <div class="profile_info_label"><%= t('name') %></div>
         <div class="profile_info_text">
           <%= p.first_name %> <%= p.last_name %>
