--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -825,7 +825,7 @@ table#listing td.col-5{
 }
 table#listing td.col-6{
     text-align: right;
-   width:13%;
+    width:13%;
     padding: 5px;
     padding-left:10px;
 }
@@ -895,11 +895,11 @@ tr.tr-blank{
     margin-bottom: 20px;
 }
 .bread_crumb a {
-   color:#000;
+    color:#000;
     text-decoration: none;
 }
 .bread_crumb a:hover {
-   color:#bb0000;
+    color:#bb0000;
     text-decoration: underline;
 }
 #error-box {
@@ -918,7 +918,7 @@ tr.tr-blank{
     clear : both;
     background: url(/images/foot.png) repeat-x;
     width:100%;
-     margin-top:15px;
+    margin-top:15px;
 }
 #footer_logo {
     height:66px;
@@ -961,13 +961,13 @@ tr.tr-blank{
     text-decoration:underline;
 }
 #outer-autosuggest-menu{
-float: right;
-margin-top: 26px;
-width: 329px;
+    float: right;
+    margin-top: 26px;
+    width: 329px;
 }
 #autosuggest_menu_input{
-width: 300px;
-height: 14px;
+    width: 300px;
+    height: 14px;
 }
 #institution-name{
     margin: 12px 0 0 0;
@@ -1018,4 +1018,24 @@ height: 14px;
 }
 textarea{
     font-family: Arial !important;
+}
+.user_button{
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    background:#27292B none repeat scroll 0 0;
+    color:#FFFFFF;
+    font-family:arial;
+    font-size:14px;
+    font-weight:bold;
+    margin:0px;
+    margin-top:30px;
+    padding:7px 10px;
+    border:none;
+    text-align:center;
+    width:auto;
+    cursor:pointer;
+    float:left;
+    margin-right:20px;
+    text-decoration: none;
+    display: block;
 }
