--- a/public/stylesheets/rtl/archived_employee/profile.css
+++ b/public/stylesheets/rtl/archived_employee/profile.css
@@ -519,3 +519,8 @@ html>body #nav ul.scriptaculously{/*ie shit*/
     text-align: center;
     height: 250px;
 }
+.profile-topbanner{
+    width: 185px;
+    height: 135px;
+    background: url(/images/master_student/profile/topbanner_rtl.png);
+}
