--- a/app/views/archived_employee/_general.erb
+++ b/app/views/archived_employee/_general.erb
@@ -20,7 +20,8 @@
 
 <div class="profile_top_banner">
   <span class="profile"><%= t('details') %></span>
-  <%= rtl? ? image_tag("master_student/profile/topbanner_rtl.png") : image_tag("master_student/profile/topbanner.png") %></div>
+  <div class="profile-topbanner"></div>
+</div>
 <div class="profile_info_label_top"><%= t('joining_date') %></div>
 <div class="profile_info_text_top"><%= I18n.l(@employee.joining_date, :format=>"%d %b,%Y")%></div>
 
