--- a/app/views/employee/_general.erb
+++ b/app/views/employee/_general.erb
@@ -20,7 +20,8 @@
 
 <div class="profile_top_banner">
   <span class="profile"><%= t('details') %></span>
-  <%= rtl? ? image_tag("master_student/profile/topbanner_rtl.png") : image_tag("master_student/profile/topbanner.png") %></div>
+  <div class="profile-topbanner"></div>
+</div>
 
 <table width="700">
   <tr class="odd left"><td><%= t('joining_date') %></td><td class="right"><%= I18n.l(@employee.joining_date,:format=>:normal)%></td></tr>
