--- a/app/views/layouts/forgotpw.erb
+++ b/app/views/layouts/forgotpw.erb
@@ -23,7 +23,7 @@
 <head>
 <% @direction = (rtl?) ? 'rtl/' : '' %>
 <title><%= @title %></title>
-  <%= stylesheet_link_tag  @direction+"_layouts/forgotpw", @direction+"_styles/style" %>
+  <%= stylesheet_link_tag(*get_forgotpw_stylesheets) %>
   <%= javascript_include_tag :defaults %>
 </head>
 
