--- a/public/stylesheets/archived_student/profile.css
+++ b/public/stylesheets/archived_student/profile.css
@@ -236,3 +236,8 @@
     text-align: center;
     height: 250px
 }
+.profile-topbanner{
+    width: 185px;
+    height: 135px;
+    background: url(/images/master_student/profile/topbanner.png);
+}
