--- a/public/stylesheets/employee/profile.css
+++ b/public/stylesheets/employee/profile.css
@@ -674,3 +674,8 @@ html>body #nav ul.scriptaculously{/*ie shit*/
     text-align: center;
     height: 250px
 }
+.profile-topbanner{
+    width: 185px;
+    height: 135px;
+    background: url(/images/master_student/profile/topbanner.png);
+}
