--- a/public/stylesheets/rtl/application.css
+++ b/public/stylesheets/rtl/application.css
@@ -1018,3 +1018,23 @@ height: 14px;
 textarea{
     font-family: Arial !important;
 }
+.user_button{
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    background:#27292B none repeat scroll 0 0;
+    color:#FFFFFF;
+    font-family:arial;
+    font-size:14px;
+    font-weight:bold;
+    margin:0px;
+    margin-top:30px;
+    padding:7px 10px;
+    border:none;
+    text-align:center;
+    width:auto;
+    cursor:pointer;
+    float:right;
+    margin-left:20px;
+    text-decoration: none;
+    display: block;
+}
