--- a/app/views/exam/grouping.html.erb
+++ b/app/views/exam/grouping.html.erb
@@ -107,7 +107,8 @@
     <%= link_to t('course_text'), :controller => "courses", :action=>"index" %> &raquo;
     <%= link_to "#{@batch.course.full_name}", :controller => "courses", :action => "show",:id=>@batch.course_id %> &raquo;
     <%= link_to "#{@batch.name}", [@batch.course, @batch] %> &raquo;
-   <%= link_to t('exams_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('exams_text'), :controller => "exam", :action=>"index" %> &raquo;
+    <%= link_to t('exam_groups_text'), batch_exam_groups_path(@batch) %> &raquo;
     <%= t('connect_exams') %>
   </div>
   <div id="application-list"> 
