fixes style issue in inner tab menu
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3706 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/generate_reports.html.erb
+++ b/app/views/exam/generate_reports.html.erb
@@ -27,8 +27,8 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('generate_previous_reports')}", {:controller => "exam", :action => "generate_previous_reports"}, :class=> 'user_button' %></li>
-    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch",:job_type=>"1"), :class=> 'user_button' %></li>
+    <li><%= link_to "#{t('generate_previous_reports')}", {:controller => "exam", :action => "generate_previous_reports"} %></li>
+    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch",:job_type=>"1") %></li>
   </ul>
 </div>
 <div id="page-yield">
