fixes style issue in inner tab menu
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3708 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/create_exam.html.erb
+++ b/app/views/exam/create_exam.html.erb
@@ -28,7 +28,7 @@
 <div id="inner-tab-menu">
   <ul>
     <% if permitted_to? :previous_batch_exams, :exam %>
-      <li><%= link_to "#{t('previous_batch_exam')}", {:controller => "exam", :action => "previous_batch_exams"}, :class=> 'user_button' %></li>
+      <li><%= link_to "#{t('previous_batch_exam')}", {:controller => "exam", :action => "previous_batch_exams"} %></li>
     <% end %>
   </ul>
 </div>
