removed class user_button from inner tab menu items
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3710 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/generate_previous_reports.html.erb
+++ b/app/views/exam/generate_previous_reports.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch", :job_type=>"2"), :class=> 'user_button' %></li>
+    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch", :job_type=>"2") %></li>
   </ul>
 </div>
 <div id="page-yield">
