--- a/app/views/exam/generated_report2.erb
+++ b/app/views/exam/generated_report2.erb
@@ -27,7 +27,7 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('pdf_report')}", {:controller => "exam", :action => "generated_report2_pdf", :subject_id=> @subject.id,:page_height=>760},:target => '_blank', :class=> 'user_button' %></li>
+    <li><%= link_to "#{t('pdf_report')}", {:controller => "exam", :action => "generated_report2_pdf", :subject_id=> @subject.id,:page_height=>760},:target => '_blank' %></li>
   </ul>
 </div>
 
