--- a/app/views/exam/student_batch_rank.html.erb
+++ b/app/views/exam/student_batch_rank.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('pdf_report')}", {:controller => "exam", :action => "student_batch_rank_pdf", :batch_id=>@batch.id},:target => '_blank', :class=> 'user_button' %></li>
+    <li><%= link_to "#{t('pdf_report')}", {:controller => "exam", :action => "student_batch_rank_pdf", :batch_id=>@batch.id},:target => '_blank' %></li>
   </ul>
 </div>
 
