modified previous batch exam marks workflow [fixed #3561]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3713 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/edit_previous_marks.html.erb
+++ b/app/views/exam/edit_previous_marks.html.erb
@@ -16,7 +16,23 @@
 #KIND, either express or implied.  See the License for the
 #specific language governing permissions and limitations
 #under the License. -%>
-
+<script>
+  function check_checkbox(val)
+  {
+    $("check"+val).checked=true
+  }
+  function check_blanks()
+  {
+    var blank_marks = 0;
+    $$('.marks-box').each(function(marks) {if(marks.value==""){blank_marks=1;} });
+    if(blank_marks==1)
+    {
+      if (!confirm('Students with no marks will be marked as absent. Do you want to continue?')) return false;
+      else return true;
+    }
+    else return true;
+  }
+</script>
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
@@ -54,6 +70,7 @@
           <% unless @exam_group.exam_type == 'Marks' %>
             <td><%= t('grade') %></td>
           <% end %>
+          <td>Retake</td>
         </tr>
         <% @students.each do |student| %>
           <tr class="tr-<%= cycle('odd', 'even') %>">
@@ -62,11 +79,11 @@
             <% unless @exam_group.exam_type == 'Grades' %>
               <td class="col-1"><div class="label-field-pair">
                   <div class="text-input-bg">
-                    <%= text_field_tag "exam[#{student.id}][marks]", @exam_score.marks, :size => '4' %></div></div></td>
+                    <%= text_field_tag "exam[#{student.id}][marks]", @exam_score.marks, :size => '4', :onChange=>"check_checkbox(#{student.id})", :class=>"marks-box" %></div></div></td>
             <% else %>
               <td class="col-2"><div class="label-field-pair">
                   <div class="text-input-bg"><%= select "exam[#{student.id}]", "grading_level_id", @grades.map {|g| [g.name, g.id] },
-                      { :prompt =>"#{t('select_grade')}", :selected => @exam_score.grading_level_id } %></div></div></td>
+                      { :prompt =>"#{t('select_grade')}", :selected => @exam_score.grading_level_id, :onChange=>"check_checkbox(#{student.id})"},:class=>"marks-box" %></div></div></td>
             <% end %>
 
             <td class="col-2"><div class="label-field-pair2">
@@ -75,12 +92,13 @@
             <% unless @exam_group.exam_type == 'Marks' %>
               <td class="col-1"><%= @exam_score.grading_level %></td>
             <% end %>
+            <td class="col-1"><%= check_box_tag "student_ids[]", student.id,false,{:class=>'right',:id=>"check#{student.id}"} %></td>
           </tr>
 
         <% end %>
 
       </table>
-      <div id="sub-button"><%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %></div>
+      <div id="sub-button"><%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button", :onClick => "if(check_blanks()==true) return true; else return false;" %></div>
     <% end %>
 
     <div class="extender"></div>
