cce reports page style issue fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3716 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/create_reports.html.erb
+++ b/app/views/cce_reports/create_reports.html.erb
@@ -28,7 +28,7 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch", :job_type=>"3"), :class=> 'user_button' %></li>
+    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch", :job_type=>"3") %></li>
   </ul>
 </div>
 <div id="page-yield">
